# livemd

./: .gitignore  Cargo.toml  README.md  install.sh  kotoma.toml.high.example  kotoma.toml.standard.example  kotomark.toml.high.example  kotomark.toml.standard.example  livemd.toml.example  livemd.toml.high.example  livemd.toml.standard.example  setup.sh  setup.txt
src/: app.rs  audio.rs  config.rs  diarize.rs  filter.rs  main.rs  markdown.rs  msg.rs  transcribe.rs  translate.rs  ui.rs  vad.rs
