[package]
name = "livemd"
version = "0.1.0"
edition = "2021"
description = "Live voice transcription TUI powered by whisper.cpp"
license = "MIT"
repository = "https://github.com/shohei81/livemd"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossbeam-channel = "0.5"
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
rubato = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-rs = { version = "0.6", default-features = false, features = ["static"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }
webrtc-vad = "0.4"
whisper-rs = { version = "0.13", features = ["metal"] }

[profile.release]
lto = "thin"
codegen-units = 1
