[package]
name = "kotoma"
version = "0.1.0"
edition = "2021"
description = "Live bilingual voice transcription TUI powered by whisper.cpp"
license = "MIT"
repository = "https://github.com/shohei81/kotoma"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossbeam-channel = "0.5"
crossterm = "0.28"
dirs = "5"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
rubato = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }
webrtc-vad = "0.4"
whisper-rs = { version = "0.13", features = ["metal", "whisper-cpp-tracing"] }

[profile.release]
lto = "thin"
codegen-units = 1
